--- a/0306TIL.md
+++ b/0306TIL.md
@@ -21,7 +21,7 @@
     
     </aside>
   
-  - index.html에 <script> 추가
+  - index.html에 script 추가
     
     ```html
     <script src="app.js" defer></script>
@@ -66,8 +66,6 @@ const number2 = 2.8;
 const result = add(number1, number2);
 console.log(result);                        // 52.8
 ```
-
-
 
 <aside>
 💡 JavaScript uses Dynamic type resolves at runtime, but TypeScript uses Static type set during development
@@ -334,5 +332,3 @@ person.role = [1, "actor"];                       // Allowed
 💡 ⇒ person.role 에 세 번째 요소를 넣어 재할당하면 오류가 뜨지만, person.role.push(”whatever”); 의 경우 오류가 뜨지 않음을 주의해야 한다.
 
 </aside>
-
-
